--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -196,8 +196,6 @@
           href: service-connect-to-tygraph.md
         - name: UserVoice
           href: service-connect-to-uservoice.md
-        - name: Visual Studio Team Services
-          href: service-connect-to-visual-studio.md
         - name: VMob
           href: service-connect-to-vmob.md
         - name: Webtrends
@@ -528,6 +526,8 @@
           href: service-gateway-onprem-tshoot.md
         - name: Power BI Gateway - Personal
           href: personal-gateway.md
+        - name: Usar Kerberos para el inicio de sesión único (SSO)
+          href: service-gateway-kerberos-for-sso-pbi-to-on-premises-data.md
         - name: Configuración de proxy
           href: service-gateway-proxy.md
         - name: 'Administrar el origen de datos de su empresa: Analysis Services'
