--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -92,6 +92,8 @@
           href: service-admin-premium-purchase.md
         - name: Administración de Power BI Premium
           href: service-admin-premium-manage.md
+        - name: Compatibilidad con grandes conjuntos de datos
+          href: service-premium-large-datasets.md
         - name: Preguntas más frecuentes sobre Power BI Premium
           href: service-premium-faq.md
         - name: Notas de la versión de Power BI Premium
