--- a/powerbi-docs/guided-learning/gettingdata.yml
+++ b/powerbi-docs/guided-learning/gettingdata.yml
@@ -1,3 +1,4 @@
+### YamlMime:YamlDocument
 documentType: Tutorial
 title: "Obtención de datos"
 metadata:
@@ -12,17 +13,16 @@ metadata:
   manager: kfile
   ms.service: powerbi
   ms.topic: get-started-article
-  ms.date: 10/27/2017
+  ms.date: 12/05/2017
   ms.author: davidi
-items:
-- durationInMinutes: 1
-  content: >
-    Explore y conozca las muchas maneras en que puede obtener datos y trabajar con ellos en Power BI.
-  ms.openlocfilehash: b994ce3414ac359333199c2174570ee314193341
-  ms.sourcegitcommit: 284b09d579d601e754a05fba2a4025723724f8eb
+  ms.openlocfilehash: a490c763a04fb3558ebc6e973ff1ec00d18c876c
+  ms.sourcegitcommit: d91436de68a0e833ecff18d976de9d9431bc4121
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 11/15/2017
+  ms.lasthandoff: 12/06/2017
+items:
+- durationInMinutes: 1
+  content: "Los datos son la esencia de Power BI. En esta sección del curso de **Aprendizaje guiado**, aprenderá a obtener datos y trabajar con ellos en Power BI.\n"
 - title: "Información general sobre Power BI Desktop"
   durationInMinutes: 4
   content: >
@@ -65,4 +65,4 @@ items:
 
 
     [!INCLUDE [](includes/1-5-cleaning-irregular-data.md)]
-- content: "Ha completado la sección **Obtención de datos** del curso de Aprendizaje guiado de Power BI.\0"
+- content: "Vamos a empezar. Ha completado la sección **Obtención de datos** del curso de Aprendizaje guiado de Power BI. El siguiente paso es aprender a **modelar**, que es el asunto del siguiente tutorial.\0"
