--- a/powerbi-docs/guided-learning/gettingstarted.yml
+++ b/powerbi-docs/guided-learning/gettingstarted.yml
@@ -1,3 +1,4 @@
+### YamlMime:YamlDocument
 documentType: Tutorial
 title: "Introducción"
 metadata:
@@ -12,16 +13,16 @@ metadata:
   manager: kfile
   ms.service: powerbi
   ms.topic: get-started-article
-  ms.date: 10/27/2017
+  ms.date: 12/05/2017
   ms.author: davidi
-items:
-- durationInMinutes: 1
-  content: "Obtenga información acerca de qué es Power BI, cómo funcionan sus bloques de creación de forma conjunta y cómo puede usarlos para obtener información de los datos.\n"
-  ms.openlocfilehash: 398c10dfbcd935276b98f3d50df172d6b0d2af48
-  ms.sourcegitcommit: 284b09d579d601e754a05fba2a4025723724f8eb
+  ms.openlocfilehash: 79bcf9e9e40e89149bbb9c8ffcc584e160a89386
+  ms.sourcegitcommit: d91436de68a0e833ecff18d976de9d9431bc4121
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 11/15/2017
+  ms.lasthandoff: 12/06/2017
+items:
+- durationInMinutes: 1
+  content: "En esta sección inicial de **Aprendizaje guiado**, aprenderá qué es Power BI, cómo funcionan sus bloques de creación de forma conjunta y cómo puede usarlos para obtener información detallada de los datos.\n"
 - title: "Presentación de Power BI"
   durationInMinutes: 5
   content: >
@@ -48,4 +49,4 @@ items:
   durationInMinutes: 5
   content: >
     [!INCLUDE [](includes/0-4-summary-of-intro-to-power-bi.md)]
-- content: "Ha completado la sección **Introducción** del curso de Aprendizaje guiado de Power BI.\0"
+- content: "Ha completado la sección **Introducción** del curso de Aprendizaje guiado de Power BI. Vamos a empezar. Ahora, puede continuar en la siguiente parte del Aprendizaje guiado, que es **Obtención de datos**. Para continuar, seleccione el botón **Obtener datos**.\0"
