--- a/powerbi-docs/guided-learning/introductiontodax.yml
+++ b/powerbi-docs/guided-learning/introductiontodax.yml
@@ -1,3 +1,4 @@
+### YamlMime:YamlDocument
 documentType: Tutorial
 title: "Introducción a DAX"
 metadata:
@@ -10,17 +11,17 @@ metadata:
   manager: kfile
   ms.service: powerbi
   ms.topic: get-started-article
-  ms.date: 10/27/2017
+  ms.date: 12/05/2017
   ms.author: davidi
+  ms.openlocfilehash: 375f4144016121171f9e7449f2d664efe7cf3aa1
+  ms.sourcegitcommit: d91436de68a0e833ecff18d976de9d9431bc4121
+  ms.translationtype: HT
+  ms.contentlocale: es-ES
+  ms.lasthandoff: 12/06/2017
 items:
 - durationInMinutes: 1
   content: >
     Aprenda a crear y trabajar con DAX de manos de un conocido experto.
-  ms.openlocfilehash: 5723e4a56974ab25eb43f3130755f6bccb71214c
-  ms.sourcegitcommit: 284b09d579d601e754a05fba2a4025723724f8eb
-  ms.translationtype: HT
-  ms.contentlocale: es-ES
-  ms.lasthandoff: 11/15/2017
 - title: "Introducción a DAX"
   durationInMinutes: 9
   content: >
@@ -63,4 +64,4 @@ items:
 
 
     [!INCLUDE [](includes/7-6-dax-tables-and-filtering.md)]
-- content: "Ha completado la sección **Introducción a DAX** del curso de Aprendizaje guiado de Microsoft Power BI.\0"
+- content: "Ha completado la sección **Introducción a DAX** del curso de Aprendizaje guiado de Power BI. Es toda una aventura. Si ha seguido estos tutoriales en orden, habrá terminado todas las secciones del curso de **Aprendizaje guiado**. Vamos a empezar. Ahora, comience a usar **Power BI** para crear paneles e informes atractivos que cuenten su historia.\0"
