Commit translated content

--- a/powerbi-docs/guided-learning/exploringdata.yml
+++ b/powerbi-docs/guided-learning/exploringdata.yml
@@ -1,5 +1,4 @@
-### YamlMime:YamlDocument
-documentType: Tutorial
+### YamlMime:Tutorial
 title: "Exploración de datos"
 metadata:
   title: "Exploración de datos | Microsoft Power BI"
@@ -7,7 +6,7 @@ metadata:
   audience: Business User
   level: Beginner
   nextTutorialHref: powerbiandexcel
-  nextTutorialTitle: Power BI y Excel
+  nextTutorialTitle: Power BI and Excel
   displayType: one-column
   author: davidiseminger
   manager: kfile
@@ -15,14 +14,15 @@ metadata:
   ms.topic: get-started-article
   ms.date: 12/05/2017
   ms.author: davidi
-  ms.openlocfilehash: 67e0b44ff76a8e32de0e6f460afe1fb45954dbb7
-  ms.sourcegitcommit: d91436de68a0e833ecff18d976de9d9431bc4121
+  ms.openlocfilehash: aa974a0f3448efde8a4410fabcf0e4f78a5050fd
+  ms.sourcegitcommit: 1791b8f10332c680a1552d5361a6e01b75091385
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 12/06/2017
+  ms.lasthandoff: 12/12/2017
 items:
 - durationInMinutes: 1
-  content: "Le damos la bienvenida al tutorial de **exploración de los datos**. Aprenderá a buscar datos y a conectarse e interactuar con ellos en Power BI.\n"
+  content: >
+    Welcome to the **exploring data** tutorial. Here you'll learn how to find, connect to, and interact with data in Power BI.
 - title: "Introducción al servicio Power BI"
   durationInMinutes: 2
   content: >
@@ -93,4 +93,4 @@ items:
 
 
     [!INCLUDE [](includes/4-6-install-configure-personal-gateway.md)]
-- content: "Esta sección de **exploración de los datos** del curso de Aprendizaje guiado le ha preparado para trabajar con diferentes tipos de datos. En el siguiente tutorial, aprenderá a usar un origen de datos común: Excel.\0"
+- content: "This **exploring data** section of Guided Learning has prepared you to work with all sorts of different data types. In the next tutorial, you learn how to use a common data source - Excel.\0"
