--- a/powerbi-docs/guided-learning/gettingstarted.yml
+++ b/powerbi-docs/guided-learning/gettingstarted.yml
@@ -1,5 +1,4 @@
-### YamlMime:YamlDocument
-documentType: Tutorial
+### YamlMime:Tutorial
 title: "Introducción"
 metadata:
   title: "Introducción | Microsoft Power BI"
@@ -7,7 +6,7 @@ metadata:
   audience: Business User
   level: Beginner
   nextTutorialHref: gettingdata
-  nextTutorialTitle: "Obtención de datos"
+  nextTutorialTitle: Getting data
   displayType: one-column
   author: davidiseminger
   manager: kfile
@@ -15,14 +14,15 @@ metadata:
   ms.topic: get-started-article
   ms.date: 12/05/2017
   ms.author: davidi
-  ms.openlocfilehash: 79bcf9e9e40e89149bbb9c8ffcc584e160a89386
-  ms.sourcegitcommit: d91436de68a0e833ecff18d976de9d9431bc4121
+  ms.openlocfilehash: 0a7456720b041b9dda176a5182f945a0b1fa63b5
+  ms.sourcegitcommit: 1791b8f10332c680a1552d5361a6e01b75091385
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 12/06/2017
+  ms.lasthandoff: 12/12/2017
 items:
 - durationInMinutes: 1
-  content: "En esta sección inicial de **Aprendizaje guiado**, aprenderá qué es Power BI, cómo funcionan sus bloques de creación de forma conjunta y cómo puede usarlos para obtener información detallada de los datos.\n"
+  content: >
+    In this initial section of **Guided Learning**, you learn what Power BI is, how its building blocks work together, and how you can use them to gain insights to your data.
 - title: "Presentación de Power BI"
   durationInMinutes: 5
   content: >
@@ -49,4 +49,4 @@ items:
   durationInMinutes: 5
   content: >
     [!INCLUDE [](includes/0-4-summary-of-intro-to-power-bi.md)]
-- content: "Ha completado la sección **Introducción** del curso de Aprendizaje guiado de Power BI. Vamos a empezar. Ahora, puede continuar en la siguiente parte del Aprendizaje guiado, que es **Obtención de datos**. Para continuar, seleccione el botón **Obtener datos**.\0"
+- content: "You've completed the **Getting started** section of Microsoft Power BI Guided learning. Way to go! Now you can move on to the next part of Guided Learning, which is **Getting data**. Select the **Getting data** button below to keep going.\0"
