--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -12,7 +12,7 @@
           href: service-free-vs-pro.md
         - name: Orígenes de datos de Power BI
           href: service-get-data.md
-        - name: La nueva experiencia de navegación de Power BI
+        - name: Introducción a la nueva experiencia de navegación de Power BI
           href: service-the-new-power-bi-experience.md
         - name: 10 sugerencias para obtener ayuda
           href: service-tips-for-finding-help.md
@@ -68,7 +68,7 @@
           href: sample-retail-analysis.md
     - name: Tareas comunes
       items:
-        - name: Paneles favoritos en Power BI
+        - name: 'Aplicaciones, informes y paneles favoritos de Power BI'
           href: service-dashboard-favorite.md
         - name: 'Imprimir un panel, imprimir un icono de un panel o imprimir una página de un informe'
           href: service-print.md
@@ -228,7 +228,7 @@
           href: service-pin-tile-to-another-dashboard.md
         - name: Anclar un icono a un panel de Power BI desde Excel
           href: service-dashboard-pin-tile-from-excel.md
-        - name: Power BI Publisher for Excel
+        - name: Power BI Publisher para Excel
           href: publisher-for-excel.md
         - name: Anclaje de un icono a un panel de Power BI desde el cuadro de preguntas de Preguntas y respuestas
           href: service-dashboard-pin-tile-from-q-and-a.md
@@ -780,7 +780,7 @@
           href: desktop-add-custom-column.md
         - name: Creación de objetos visuales que reaccionan en Power BI
           href: desktop-create-responsive-visuals.md
-        - name: Uso de etiquetas de jerarquía en línea en Power BI Desktop (versión preliminar)
+        - name: Uso de etiquetas de jerarquía alineadas en Power BI Desktop (versión preliminar)
           href: desktop-inline-hierarchy-labels.md
         - name: Uso de la segmentación de rango numérico
           href: desktop-slicer-numeric-range.md
